# pyiec61850-ng

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  run_tests.py  setup.py  setup_wheel.py  test-build.sh  version.py
.github/: CODEOWNERS  update-tag.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  build_issue.yml  config.yml  feature_request.yml
.github/workflows/: build-wheel.yml  dco.yml  docs.yml  test-windows-build.yml
docs/: API_REFERENCE.md
examples/: 01_basic_connection.py  02_device_discovery.py  03_read_data_values.py  04_file_transfer.py  05_tase2_demo.py  06_tase2_transfer_sets.py  07_tase2_control.py  08_tase2_info_messages.py  09_goose_subscriber.py  10_goose_publisher.py  11_sampled_values.py  12_reporting.py  13_control.py  14_server.py  15_tls_connection.py  16_read_dataset.py  17_benchmark_reads.py  Dockerfile.testserver  README.md  docker-compose.yml
patches/: iec61850.i  iec61850.i.patch  informationReportHandler.hpp  svHandler.hpp
pyiec61850/: __init__.py  _libload.py
pyiec61850/_pyinstaller/: __init__.py  hook-pyiec61850.py  pyi_rth_pyiec61850.py
pyiec61850/goose/: __init__.py  exceptions.py  publisher.py  subscriber.py  types.py
pyiec61850/mms/: __init__.py  client.py  control.py  exceptions.py  files.py  gocb.py  logging_service.py  reporting.py  tls.py  types.py  utils.py
pyiec61850/server/: __init__.py  exceptions.py  server.py  types.py
pyiec61850/sv/: __init__.py  exceptions.py  publisher.py  subscriber.py  types.py
pyiec61850/tase2/: __init__.py  client.py  connection.py  constants.py  exceptions.py  types.py
scripts/: check_wheel.py
tests/: __init__.py  _binding_symbols.txt  conftest.py  support.py  test_binding_contract.py  test_connection.py  test_control.py  test_data_model.py  test_files.py  test_gocb.py  test_goose.py  test_import.py  test_logging_service.py  test_mms.py  test_mms_faithful.py  test_mms_types.py  test_mms_value_conversion.py  test_reporting.py  test_server.py  test_sv.py  test_swig_safety.py  test_tase2.py  test_tase2_connection.py  test_tls.py
tests/integration/: _fixture.py  _goose_roundtrip_worker.py  _sv_roundtrip_worker.py  test_client_options.py  test_connect.py  test_control_integration.py  test_discovery.py  test_file_transfer.py  test_goose_publisher.py  test_goose_roundtrip.py  test_ied_server_loopback.py  test_read_dataset.py  test_read_value_fc.py  test_sv_roundtrip.py  test_write_value.py
