[build-system]
requires = ["setuptools>=45", "wheel", "docker"]
build-backend = "setuptools.build_meta"

[project]
name = "pyiec61850-ng"
dynamic = ["version", "description", "readme"]
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    { name = "f0rw4rd", email = "pyiec61850@example.com" }
]
keywords = [
    "iec61850",
    "mms",
    "goose",
    "iec-61850",
    "power-systems",
    "substation-automation",
    "smart-grid",
    "scada",
    "tase2",
    "iccp",
    "iec60870-6",
    "control-center"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.entry-points."pyinstaller40"]
hook-dirs = "pyiec61850._pyinstaller:get_hook_dirs"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501", "E402", "UP006", "UP007", "UP035", "UP045", "B904"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[project.urls]
Homepage = "https://github.com/f0rw4rd/pyiec61850-ng"
Documentation = "https://github.com/f0rw4rd/pyiec61850-ng#readme"
Repository = "https://github.com/f0rw4rd/pyiec61850-ng"
Issues = "https://github.com/f0rw4rd/pyiec61850-ng/issues"